--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ img, div, a, pile, div#pile em, { behavior: url(iepngfix.htc) }
 
 							<li><a class="show1 activetab" href="#1">V</a></li>
 
-							//<li><a class="show2" href="#2">Ă</a></li>
+							<li><a class="show2" href="#2">Ă</a></li>
 
 							<li><a class="show3" href="#3">N</a></li>
 							
